--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boomerang IT Solutions - Innovative Technology Services</title>
-    <meta name="description" content="Boomerang IT Solutions is a leading technology company providing innovative IT services and software products to businesses worldwide." />
+    <title>AITI - Innovative Technology Services</title>
+    <meta name="description" content="AITISERVE DJAYA NARAYA is a leading technology company providing innovative IT and AI solutions for businesses worldwide." />
   </head>
   <body>
     <div id="root"></div>
