--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/icon.png" />
+    <link rel="icon" type="image/png" href="/images/branding/logo_white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AITI - Innovative Technology Services</title>
-    <meta name="description" content="AITISERVE DJAYA NARAYA is a leading technology company providing innovative IT and AI solutions for businesses worldwide." />
+    <title>Kodera - Agensi Pengembangan Website</title>
+    <meta name="description" content="Kodera adalah agensi pengembangan website yang menghubungkan klien dengan developer profesional melalui manajemen proyek yang terstruktur dan layanan berkualitas." />
   </head>
   <body>
     <div id="root"></div>
